syntax = "proto3";

message LoginRequest {
  string deviceId = 1;  
}

message LoginResponse {
  int32 playerId = 1;
}

message UpdateRequest {
  ResourceType resourceType = 1;
  int32 resourceValue = 2;
}

enum ResourceType {
  Coins=0;
  Rolls =1;
}

message UpdateResponse {  
  int32 newBalance = 1;
  bool success=2;
  string errorMessage=3;
}

message ServerError {
  string message=1;
}

message ServerResponse {
  oneof inner_response {
    ServerError serverError = 1;
    UpdateResponse updateResponse = 2;
    LoginResponse loginResponse= 3;
  }
}